RESOLVED FIXED94245
UserMessageEncoder::baseEncode() should ASSERT when attempting to encode a non-shareable image
https://bugs.webkit.org/show_bug.cgi?id=94245
Summary UserMessageEncoder::baseEncode() should ASSERT when attempting to encode a no...
Jeff Miller
Reported 2012-08-16 13:17:27 PDT
UserMessageEncoder::baseEncode() should ASSERT when attempting to encode a nnon-shareable image
Attachments
Patch (1.58 KB, patch)
2012-08-16 13:22 PDT, Jeff Miller
ap: review+
Jeff Miller
Comment 1 2012-08-16 13:22:20 PDT
Jeff Miller
Comment 2 2012-08-17 07:48:41 PDT
Note You need to log in before you can comment on or make changes to this bug.