UserMessageEncoder::baseEncode() should ASSERT when attempting to encode a non-shareable image https://bugs.webkit.org/show_bug.cgi?id=94245

Reviewed by Alexey Proskuryakov.

It's a programming error if a client attempts to encode an image that has an
allocated bitmap, but isn't shareable, so we should assert in this case.

* Shared/UserMessageCoders.h:
(WebKit::UserMessageEncoder::baseEncode):
Assert if we're trying to encode valid non-shareable image.


Canonical link: https://commits.webkit.org/112151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125900 268f45cc-cd09-0410-ab3c-d52691b4dbfc